# KeyValueStoreBenchmark

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  build.sh  build_image.sh  dbwrappers.cpp  install_dependencies.sh  main.cpp
results/: benchmark.csv  benchmark.xlsx
scripts/: build.sh  buildImage.sh  clean.sh  downloadGutenberg.py  findBest.py  installDependencies.sh
src/: dbwrappers.cpp  dbwrappers.h  helpers.h  main.cpp  stores.cpp  stores.h  tests.cpp  utils.cpp  utils.h
